fixed broken CSS in new nav bar container

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -20,8 +20,8 @@ body {
     max-width: 100%;
     width: 100%;
     margin: 0 auto;
-    display: flex; !important;
-    align-items: center; !important;
+    display: flex !important;
+    align-items: center !important;
     justify-content: space-between;
     padding-left: 0 !important; 
     padding-right: 0 !important;
